<resources>
    <string name="app_name">Dogly - Dog adoption</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_myads">My Ads</string>
    <string name="menu_notif_settings">Notifications</string>
    <string name="menu_signout">Sign-out</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="prompt_name">Display Name</string>
    <string name="prompt_title">Title</string>
    <string name="free_text">Free Text</string>
    <string name="location">Location</string>
    <string name="dog_name">Dog name</string>
    <string name="dog_age">Dog Age</string>
    <string name="dog_type">Dog type</string>
    <string name="dog_color">Dog color</string>
    <string name="dog_city">Choose city</string>
    <string name="dog_district">Choose district</string>
    <string name="phone_number">Phone number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_text">Not a member? click here to sign-up</string>
    <string name="wrong_credentials">Wrong email or password</string>
    <string name="signup_failed">Could not Sign-up, Please try again later</string>
    <string name="signup_details_error">"Error: Password length must be 6 to 12 characters, display name         must contain only letters and digits, email address must be valid.     "</string>
    <string-array name="dog_type_list">
        <item>@string/dog_type</item>
        <item>@string/alaskan_malamute</item>
        <item>@string/alaskan_klee_kais</item>
        <item>@string/amstaff</item>
        <item>@string/american_bulldog</item>
        <item>@string/american_eskimos</item>
        <item>@string/american_pit_bull_terriers</item>
        <item>@string/afghan_hounds</item>
        <item>@string/affenpinschers</item>
        <item>@string/japanis_akita</item>
        <item>@string/basset_hound</item>
        <item>@string/bourier_des_flander</item>
        <item>@string/english_bulldog</item>
        <item>@string/french_bulldogs</item>
        <item>@string/bull_terriers</item>
        <item>@string/bullmastiff</item>
        <item>@string/boston_terriers</item>
        <item>@string/beauceron</item>
        <item>@string/boxer</item>
        <item>@string/beagle</item>
        <item>@string/bichon_frises</item>
        <item>@string/bloodhounds</item>
        <item>@string/basenji</item>
        <item>@string/brittany</item>
        <item>@string/bernese_mountain_dog</item>
        <item>@string/golden_retriever</item>
        <item>@string/brussels_griffon</item>
        <item>@string/dogue_de_bordeauxs</item>
        <item>@string/siberian_huskys</item>
        <item>@string/west_highland_white_terrier</item>
        <item>@string/tibetan_terrier</item>
        <item>@string/black_russian_terriers</item>
        <item>@string/yorkshire_terriers</item>
        <item>@string/canaan</item>
        <item>@string/old_english_sheep</item>
        <item>@string/labrador_retriever</item>
        <item>@string/american_water_spaniel</item>
        <item>@string/saint_bernard</item>
        <item>@string/samoyed</item>
        <item>@string/saluki</item>
        <item>@string/english_setter</item>
        <item>@string/chinese_crested</item>
        <item>@string/papillon</item>
        <item>@string/pug</item>
        <item>@string/pincher</item>
        <item>@string/chesapeake_bay_retriever</item>
        <item>@string/japanese_chins</item>
        <item>@string/chihuahua</item>
        <item>@string/chow_chow</item>
        <item>@string/australian_kelpie</item>
        <item>@string/cocker_spaniel</item>
        <item>@string/breaded_collie</item>
        <item>@string/short_hair_collie</item>
        <item>@string/coton_de_tulears</item>
        <item>@string/cavalier_king_charles_spaniel</item>
        <item>@string/cairn_terriers</item>
        <item>@string/cana_corso</item>
        <item>@string/rhodesian_ridgebacks</item>
        <item>@string/flat_couted_retriver</item>
        <item>@string/caucasian_ovcharka</item>
        <item>@string/german_shepherd</item>
        <item>@string/belgian_malinois</item>
        <item>@string/anatolian_shepherd</item>
        <item>@string/australian_shepherds</item>
        <item>@string/rottweiler</item>
        <item>@string/shih_tzu</item>
        <item>@string/shiba_inu</item>
        <item>@string/shikoku</item>
        <item>@string/shetland_sheepdogs</item>
        <item>@string/german_spitz</item>
        <item>@string/chinese_shar_peis</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="dog_color_list">
        <item>@string/dog_color</item>
        <item>@string/black</item>
        <item>@string/white</item>
        <item>@string/grey</item>
        <item>@string/brown</item>
        <item>@string/beige</item>
        <item>@string/black_and_white</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="dog_age_years_list">
        <item>@string/years</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="dog_age_years_list_search">
        <item>@string/max_years_age</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="dog_age_months_list">
        <item>@string/months</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="dog_district_entries_list">
        <item>@string/dog_district</item>
        <item>@string/northern_district</item>
        <item>@string/jerusalem_district</item>
        <item>@string/central_district</item>
        <item>@string/southern_district</item>
    </string-array>
    <string-array name="absolute_districts">
        <item>@string/northern_district</item>
        <item>@string/jerusalem_district</item>
        <item>@string/central_district</item>
        <item>@string/southern_district</item>
    </string-array>
    <string-array name="dog_district_entries_list_search">
        <item>@string/district</item>
        <item>@string/northern_district</item>
        <item>@string/jerusalem_district</item>
        <item>@string/central_district</item>
        <item>@string/southern_district</item>
    </string-array>
    <string-array name="dog_default_district_list">
        <item>@string/dog_city</item>
    </string-array>
    <string-array name="dog_northern_district_list">
        <item>@string/dog_city</item>
        <item>@string/nazareth</item>
        <item>@string/nahariyya</item>
        <item>@string/afula</item>
        <item>@string/akko</item>
        <item>@string/karmiel</item>
        <item>@string/tiberias</item>
        <item>@string/shefar_am</item>
        <item>@string/zefat</item>
        <item>@string/migdal_haemek</item>
        <item>@string/kiryat_shmona</item>
        <item>@string/yokneam_illit</item>
        <item>@string/beit_shean</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="dog_jerusalem_district_list">
        <item>@string/dog_city</item>
        <item>@string/jerusalem</item>
        <item>@string/beit_shemesh</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="dog_central_district_list">
        <item>@string/dog_city</item>
        <item>@string/tel_aviv_yafo</item>
        <item>@string/rishon_lezion</item>
        <item>@string/petah_tikva</item>
        <item>@string/netanya</item>
        <item>@string/bnei_brak</item>
        <item>@string/holon</item>
        <item>@string/ramat_gan</item>
        <item>@string/rehovot</item>
        <item>@string/bat_yam</item>
        <item>@string/kfar_saba</item>
        <item>@string/herzliya</item>
        <item>@string/modiin_maccabim_reut</item>
        <item>@string/lod</item>
        <item>@string/ramla</item>
        <item>@string/raannana</item>
        <item>@string/hod_hasharon</item>
        <item>@string/givatayim</item>
        <item>@string/rosh_haayin</item>
        <item>@string/ness_ziona</item>
        <item>@string/elad</item>
        <item>@string/ramat_hasharon</item>
        <item>@string/yavne</item>
        <item>@string/kiryat_ono</item>
        <item>@string/or_yehuda</item>
        <item>@string/givat_shmuel</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="dog_southern_district_list">
        <item>@string/dog_city</item>
        <item>@string/ashdod</item>
        <item>@string/beer_sheva</item>
        <item>@string/ashkelon</item>
        <item>@string/rahat</item>
        <item>@string/kiryat_gat</item>
        <item>@string/eilat</item>
        <item>@string/netivot</item>
        <item>@string/dimona</item>
        <item>@string/ofakim</item>
        <item>@string/arad</item>
        <item>@string/sderot</item>
        <item>@string/kiryat_malakhi</item>
        <item>@string/other</item>
    </string-array>
    <string name="alaskan_malamute">Alaskan Malamute</string>
    <string name="alaskan_klee_kais">Alaskan Klee kais</string>
    <string name="amstaff">Amstaff</string>
    <string name="american_bulldog">American Bulldog</string>
    <string name="american_eskimos">American Eskimos</string>
    <string name="american_pit_bull_terriers">American Pit Bull Terriers</string>
    <string name="afghan_hounds">Afghan Hounds</string>
    <string name="affenpinschers">Affenpinschers</string>
    <string name="japanis_akita">Japanis Akita</string>
    <string name="basset_hound">Basset Hound</string>
    <string name="bourier_des_flander">Bourier Des Flander</string>
    <string name="english_bulldog">English Bulldog</string>
    <string name="french_bulldogs">French Bulldogs</string>
    <string name="bull_terriers">Bull Terriers</string>
    <string name="bullmastiff">Bullmastiff</string>
    <string name="boston_terriers">Boston Terriers</string>
    <string name="beauceron">Beauceron</string>
    <string name="boxer">Boxer</string>
    <string name="district">District</string>
    <string name="max_years_age">Max Age (years)</string>
    <string name="enable_notif">Enable Search Notifications</string>
    <string name="enable_notif_text">Turn on to enable push-notifications</string>
    <string name="change_password_title">Change password</string>
    <string name="current_password">Current Password</string>
</resources>