<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ChangePasswordActivity"
    android:background="@drawable/app_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp"
        app:cardElevation="5dp"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/currentPassword_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:background="@drawable/selector"
                android:padding="4dp"
                android:fontFamily="@font/bubblegum_sans"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"

                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:padding="4dp"
                android:fontFamily="@font/bubblegum_sans"
                android:textStyle="bold"
                android:hint="@string/prompt_password"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/passwordRepeat_changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_repeat_password"
                android:background="@drawable/selector"
                android:fontFamily="@font/bubblegum_sans"
                android:textStyle="bold"
                android:padding="4dp"
                android:inputType="textPassword" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/loadingBar_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubblegum_sans"
        android:textStyle="bold"
        android:text="@string/change_password_title"
        android:layout_gravity="center"
        android:background="@drawable/button"/>
</LinearLayout>